--- a/studentPage.html
+++ b/studentPage.html
@@ -1,5 +1,10 @@
 <html>
-    <p style="color: black;">
-        Student Page
-    </p>
+  <body>
+    <h1>Welcome, <span id="displayName"></span>!</h1>
+    <script>
+      //still have to fix this it isnt working
+      const username = localStorage.getItem("username");
+      document.getElementById("displayName").textContent = username;
+    </script>
+  </body>
 </html>
