Added CSS file, and updated buttons on admin page to be in line with the style

--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Manage Resources</title>
+  <link rel="stylesheet" href="projectStyle.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 24px; }
     .back { margin-bottom: 16px; display:inline-block; }
@@ -25,8 +26,8 @@
     <div class="row"><label>Location</label><input type="text" placeholder="Building, Floor, Room"></div>
     <div class="row"><label>Capacity</label><input type="number" min="1" placeholder="e.g., 6"></div>
     <div class="actions">
-      <button type="button">Save</button>
-      <button type="reset">Clear</button>
+      <button class="secondaryButton">Save</button>
+      <button class="secondaryButton">Clear</button>
     </div>
   </form>
 
@@ -38,8 +39,8 @@
       <em>H-9, Room 902</em><br>
       <small>Description: Quiet study room with 6 seats.</small>
       <div class="actions" style="margin-top:8px;">
-        <button>Edit</button>
-        <button>Remove</button>
+        <button class="secondaryButton">Edit</button>
+        <button class ="secondaryButton">Remove</button>
       </div>
     </div>
 
@@ -48,8 +49,8 @@
       <em>JMSB, 3rd floor</em><br>
       <small>Description: Computer lab equipped with PCs and projectors.</small>
       <div class="actions" style="margin-top:8px;">
-        <button>Edit</button>
-        <button>Remove</button>
+        <button class = "secondaryButton">Edit</button>
+        <button class="secondaryButton">Remove</button>
       </div>
     </div>
   </div>
