--- a/adminPage.html
+++ b/adminPage.html
@@ -14,6 +14,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Admin Dashboard</title>
+  <link rel="stylesheet" href="projectStyle.css">
   <style>
     body { font-family: Arial, sans-serif; margin: 24px; }
     h1 { margin-bottom: 8px; }
