--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <title>Change Password</title>
+  <link rel="stylesheet" href="projectStyle.css" />
   <style>
     h1 {
       text-align: center;
     }
     body {
-      background-color: aquamarine;
+      background-color: #c4a0a7;
     }
     label {
       display: block;
@@ -14,12 +15,15 @@
     }
   </style>
   <body>
-    <h1>Reset Password</h1>
+    <header class="site-header">
+      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+    </header>
+    <h1>Reset Your Password</h1>
     <label>
-      Put in email to reset password
+      Enter your email to reset password:
       <label style="display: inline">
         <input type="text" id="gmail" placeholder="Enter gmail" />
-        <button id="submit" type="button">Submit</button>
+        <button id="submit" class="secondaryButton" type="button">Submit</button>
       </label>
     </label>
     <script>
