--- a/pastAppointments.html
+++ b/pastAppointments.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Past Appointments</title>
+    <link rel="stylesheet" href="projectStyle.css" />
+  </head>
   <body>
-    <h1>These are your past appointments.</h1>
-    <label> 10:00 am - 11: 00 am 2025-10-19 room = Study Room A </label>
+    <header class="site-header">
+      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+    </header>
+    <h1>Your past appointments:</h1>
+    <div class="redBlock"> 10:00 am - 11: 00 am 2025-10-19 room = Study Room A </div>
     <br />
-    <label> 09:00 am - 10: 00 am 2025-10-19 room = Study Room A </label>
+    <div class="redBlock"> 09:00 am - 10: 00 am 2025-10-19 room = Study Room A </div>
     <br />
-    <label> 1:00 pm - 2 : 00 pm 2025-10-09 room = Computer Lab B </label>
+    <div class="redBlock"> 1:00 pm - 2 : 00 pm 2025-10-09 room = Computer Lab B </label>
   </body>
 </html>
