--- a/resources.html
+++ b/resources.html
@@ -15,6 +15,9 @@
   </style>
 </head>
 <body>
+  <header class="site-header">
+      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+    </header>
   <a class="back" href="adminPage.html">← Back to Dashboard</a>
   <h1>Resources</h1>
 
