--- a/adminPage.html
+++ b/adminPage.html
@@ -1,5 +1,8 @@
 <html>
   <body>
+    <header class="site-header">
+      <img src="concordiaEmblem.png" alt ="Concordia Emblem">
+    </header>
     <h1>Welcome, <span id="displayName"></span>!</h1>
     <script>
       //still have to fix this it isnt working
@@ -51,6 +54,7 @@
         </style>
       </head>
       <body>
+        
         <h1>Admin Dashboard</h1>
         <p>Choose what you want to manage:</p>
 
